@@ -275,7 +275,6 @@
   <block id="67dbdeb11e22ea7def810bade59ce818" category="paragraph">Ces numéros de série sont généralement appelés _PAYGO - numéros de série_ et sont générés par BlueXP au moment du déploiement de Cloud Volumes ONTAP.</block>
   <block id="328a2c1e7778e9edaf79d90c51409ac4" category="list-text">Si vous avez un compte au niveau du client, vous pouvez ajouter un ou plusieurs comptes NSS.</block>
   <block id="b50f0a46135bcb7083b1f2f82032fc26" category="inline-image-macro">Capture d'écran du menu aide où support est la première option répertoriée</block>
-  <block id="19d089db572ee6a1e154a0c9c9e57bfd" category="paragraph">NetApp utilise Microsoft Azure Active Directory comme fournisseur d'identités pour les services d'authentification spécifiques au support et aux licences.</block>
   <block id="465ec6d5eafa3524c948c99d8bfcd306" category="list-text">Sur la page de connexion, indiquez l'adresse e-mail et le mot de passe que vous avez enregistrés sur le site de support NetApp pour réaliser le processus d'authentification.</block>
   <block id="cbc6cc3bb022583403171b447b2a962c" category="paragraph">Ces actions permettent à BlueXP d'utiliser votre compte NSS pour des opérations telles que le téléchargement de licences, la vérification de la mise à niveau logicielle et les inscriptions de support futures.</block>
   <block id="cf3a2d2c139bf5c9cc87fe714bfff3b1" category="paragraph">Notez ce qui suit :</block>
@@ -308,8 +307,6 @@
   <block id="00c5fef3bb9d593ae96bf5d2ee60354a" category="paragraph">Rejoignez la communauté BlueXP pour suivre des discussions en cours ou en créer de nouveaux.</block>
   <block id="5b6cf869265c13af8566f192b4ab3d2a" category="list-text">Documentation</block>
   <block id="a4a6c2ea0078252eac2d74ef3e6c917c" category="paragraph">La documentation BlueXP que vous consultez actuellement.</block>
-  <block id="80b1b0d2b1ebf2b3cba2d25759801afd" category="list-text">Courrier électronique :ng-cloudmanager-feedback@netapp.com[E-mail de commentaires]</block>
-  <block id="6702efec14563f45f1ee2f8c613b8ad8" category="paragraph">Nous accordons une grande importance à vos commentaires. Envoyez vos commentaires pour nous aider à améliorer BlueXP.</block>
   <block id="82812db645b6ff5e9c2a24ddfb66c8d6" category="paragraph">Outre les options d'auto-support mentionnées ci-dessus, vous pouvez travailler avec un spécialiste du support NetApp pour résoudre tous les problèmes après avoir activé le service de support.</block>
   <block id="d63bf50426f4c712554faec55b30c548" category="list-text">*Service* : sélectionnez le service auquel le problème est associé. Par exemple, BlueXP lorsqu'il est spécifique à un problème de support technique avec des flux de travail ou des fonctionnalités au sein du service.</block>
   <block id="2e50c5f85523f0aba9ff2db10f18279c" category="list-text">*Environnement de travail* : si applicable au stockage, sélectionnez *Cloud Volumes ONTAP* ou *sur site*, puis l'environnement de travail associé.</block>
@@ -1281,10 +1278,6 @@
   <block id="0b9c6eef4e3d3a222eb04e910d252339" category="sidebar">Licences</block>
   <block id="1fe917b01f9a3f87fa2d7d3b7643fac1" category="sidebar">FAQ</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Connaissances et support</block>
-  <block id="813011e2103649bb71f124adedcc10ea" category="sidebar">Communauté sur les blogs</block>
-  <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">Communauté NetApp</block>
-  <block id="bd5465eb0e8cf8f303aee7ea9420c8b1" category="sidebar">Blog BlueXP</block>
-  <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Webinaires sur le cloud</block>
   <block id="7a45e6298bb69116e2c6db653fb88884" category="sidebar">Toute la documentation BlueXP</block>
   <block id="e7972d5601badb4c5fcefad96c59c2fc" category="cell">\https://console.bluexp.netapp.com/ \https://netapp-cloud-account.auth0.com</block>
   <block id="e3cd99e4aa330ae6bdfb3754d83ae962" category="list-text">Si vous avez un compte partenaire ou revendeur, vous pouvez ajouter un ou plusieurs comptes NSS, mais ils ne peuvent pas être ajoutés en même temps que les comptes au niveau du client.</block>
@@ -1399,7 +1392,6 @@
   <block id="36df1b975561708b246ef1801ea416e5" category="list-text">FSX pour ONTAP</block>
   <block id="a37b0a91d7c4d8ac6ce924a7f8e1ce5a" category="list-text">ONTAP sur site</block>
   <block id="9e1b606dc521567131be8e8f6b621511" category="list-text">Exclure les répertoires</block>
-  <block id="303de3e45b2f15b7f37aa50b2824f981" category="list-text">Spécifiez un maximum de 15 répertoires à exclure de la synchronisation en saisissant leur nom ou leur chemin complet de répertoire et en appuyant sur *entrée*. Les répertoires .copy-Offload, .snapshot, ~snapshot sont exclus par défaut. Si vous souhaitez les inclure dans votre synchronisation, veuillez nous contacter.</block>
   <block id="c7326baf2ea51b61fafa4f4680d916c0" category="section-title">2 avril 2023</block>
   <block id="9c305cf5f9f8051acc945eda0fc8a1be" category="section-title">Prise en charge supplémentaire des relations Azure Data Lake Storage Gen2</block>
   <block id="61babc330ca2ea0af752965dd3965d41" category="paragraph">Vous pouvez désormais créer des relations de synchronisation avec Azure Data Lake Storage Gen2 en tant que source et cible avec les éléments suivants :</block>
@@ -1906,4 +1898,11 @@
   <block id="a020a6afcaa5c0d333b5cfb93c8d4d79" category="paragraph">Tous les nouveaux courtiers de données utiliseront la version de nœud 21.2.0. Les courtiers de données non compatibles avec cette mise à jour, tels que CentOS 7.0 et Ubuntu Server 18.0, ne fonctionneront plus avec la copie et la synchronisation BlueXP.</block>
   <block id="067302a61f4ac3cb10bab96cf4753092" category="list-text">v21.2.0</block>
   <block id="3677e4449a81dc7f1c8db056eade76dd" category="list-text">*Compatibilité Node.js* : v21.2.0</block>
+  <block id="d59e0b46782e48a01966e5c7ccc38d17" category="paragraph">NetApp utilise Microsoft Entra ID comme fournisseur d'identité pour les services d'authentification spécifiques à la prise en charge et à l'octroi de licences.</block>
+  <block id="4b51a8df678b7448fbc55b79ad365ed7" category="section-title">11 février 2024</block>
+  <block id="66a743c4896414f00b485685ab377a19" category="section-title">Filtrer les répertoires par regex</block>
+  <block id="df5c4f17d479f00c828a9edc617f2277" category="paragraph">Les utilisateurs ont désormais la possibilité de filtrer les répertoires à l'aide de regex.</block>
+  <block id="32d736bf69b032967c9ca2f284cd6218" category="inline-link">En savoir plus sur la fonction *exclure les répertoires*.</block>
+  <block id="9afa1c757f9d9c1d7a951ff852629645" category="paragraph"><block ref="9afa1c757f9d9c1d7a951ff852629645" category="inline-link-rx"></block></block>
+  <block id="65f2edc14f4a65d07600885b4ca1a56f" category="list-text">Spécifiez un maximum de 15 regex ou répertoires à exclure de la synchronisation en tapant leur nom ou répertoire complet et en appuyant sur *entrée*. Les répertoires .copy-Offload, .snapshot, ~snapshot sont exclus par défaut.</block>
 </blocks>
