@@ -82,32 +82,6 @@ sidebar:
       url: "/task-get-help.html"
   - title: Mentions légales
     url: "/legal-notices.html"
-homepage:
-  tiles:
-  - title: Commencez
-    links:
-    - title: Présentation de la copie et de la synchronisation BlueXP
-      url: concept-cloud-sync.html
-    - title: Démarrage rapide
-      url: task-quick-start.html
-    - title: FAQ
-      url: faq.html
-  - title: Utilisez la copie et la synchronisation BlueXP
-    links:
-    - title: Création d'une relation synchrone
-      url: task-creating-relationships.html
-    - title: Configuration des licences
-      url: task-licensing.html
-    - title: Gérez les groupes de courtiers de données
-      url: task-managing-data-brokers.html
-  - title: Communauté sur les blogs
-    links:
-    - title: Communauté NetApp
-      url: https://community.netapp.com/t5/Cloud-Data-Services/ct-p/CDS
-    - title: Blog BlueXP
-      url: https://cloud.netapp.com/blog
-    - title: Webinaires sur le cloud
-      url: https://cloud.netapp.com/events
 product-family:
   name: BlueXP
   repo: bluexp-family
