@@ -190,7 +190,13 @@ video::video_file_extensions.mp4[width=840,height=240]
 NOTE: Les expressions regex ou régulières diffèrent des caractères génériques ou des expressions glob. Cette fonction *seulement* fonctionne avec regex.
 
 --
-Exclure les répertoires:: Spécifiez un maximum de 15 répertoires à exclure de la synchronisation en saisissant leur nom ou leur chemin complet de répertoire et en appuyant sur *entrée*. Les répertoires .copy-Offload, .snapshot, ~snapshot sont exclus par défaut. Si vous souhaitez les inclure dans votre synchronisation, veuillez nous contacter.
+Exclure les répertoires:: Spécifiez un maximum de 15 regex ou répertoires à exclure de la synchronisation en tapant leur nom ou répertoire complet et en appuyant sur *entrée*. Les répertoires .copy-Offload, .snapshot, ~snapshot sont exclus par défaut.
++
+--
+
+NOTE: Les expressions regex ou régulières diffèrent des caractères génériques ou des expressions glob. Cette fonction *seulement* fonctionne avec regex.
+
+--
 Taille du fichier:: Choisissez de synchroniser tous les fichiers, quelle que soit leur taille ou uniquement les fichiers qui se trouvent dans une plage de taille spécifique.
 Date de modification:: Choisissez tous les fichiers quelle que soit leur date de dernière modification, les fichiers modifiés après une date spécifique, avant une date spécifique ou entre une plage de temps.
 Date de création:: Lorsqu'un serveur SMB est source, ce paramètre vous permet de synchroniser les fichiers créés après une date spécifique, avant une date spécifique ou entre une plage horaire spécifique.
